# To-Do-App

./: .dockerignore  .env  Dockerfile  db.sqlite3  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflow/: 1.yml
.github/workflows/: 1.yml
apps/task/: models.py  serializers.py  urls.py  views.py
apps/task/migrations/: 0001_initial.py
core/: settings.py  urls.py
